# ros-controller

./: .gitignore  Dockerfile  README.md  benchmark_nav2_controller_node.py  build.sh  build_viz.sh  custom_simulation.launch.py  docker-compose.yml  ekf.yaml  ekf_launch.py  init.sh  init_docker.sh  init_husky.sh  rosdep_custom.yaml  start.sh
src/goof_an_odd_husky/: package.xml  setup.cfg  setup.py
src/goof_an_odd_husky/goof_an_odd_husky/: action.py  config.py  controller_node.py  helpers.py  obstacles.py  orchestrator.py  performance_tracker.py  publisher_communicator.py  sensor_cache.py  teb_costs.py  teb_planner.py  trajectory_planner.py  trajectory_tracker.py  trajectory_visualizer.py  trajectory_vizualizer.py  visualizer_communicator.py
src/goof_an_odd_husky/goof_an_odd_husky/global_navigation/: graph.py  path_manager.py  routing.py
src/goof_an_odd_husky/goof_an_odd_husky/local_navigation/: astar_local.py  kinematics.py  local_goal_selector.py  obstacle_pipeline.py  safety.py  teb_costs.py  teb_planner.py  trajectory_planner.py
src/goof_an_odd_husky/goof_an_odd_husky/scripts/: visualize_circle_extractor.py  visualize_map.py
src/goof_an_odd_husky/goof_an_odd_husky/visualization/: map_visualizer.py  visualize_test_map.py
src/goof_an_odd_husky_common/: package.xml  setup.cfg  setup.py
src/goof_an_odd_husky_common/goof_an_odd_husky_common/: config.py  helpers.py  obstacles.py  qos.py  ros_helpers.py  types.py
src/goof_an_odd_husky_cpp/: CMakeLists.txt  package.xml
src/goof_an_odd_husky_cpp/include/: helpers.hpp  segment_acceleration_cost.hpp  segment_angular_acceleration_cost.hpp  segment_angular_velocity_cost.hpp  segment_circle_obstacles_cost.hpp  segment_velocity_cost.hpp
src/goof_an_odd_husky_cpp/src/: bindings.cpp
src/goof_an_odd_husky_msgs/: CMakeLists.txt  package.xml
src/goof_an_odd_husky_msgs/msg/: ObstacleArray.msg
src/goof_an_odd_husky_viz/: package.xml  setup.cfg  setup.py
src/goof_an_odd_husky_viz/goof_an_odd_husky_viz/: visualizer.py  visualizer_node.py
