<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>goof_an_odd_husky_viz</name>
  <version>0.1.0</version>
  <description>A goof_an_odd_husky visualizer</description>
  <maintainer email="h.radomyr@proton.me">Radomyr Husiev</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>goof_an_odd_husky_msgs</depend>
  <depend>goof_an_odd_husky_common</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>python3-numpy</depend>
  <depend>python3-scipy</depend>
  <depend>python3-pyqtgraph</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
